--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -32,6 +32,10 @@ jobs:
 #           author_name: "Nightly Build"
 #           message: "Increment nightly version"
 
+      - name: ln dependecies
+        run: |
+          ln -s ${ANDROID_HOME}/build-tools/31.0.0/d8 ${ANDROID_HOME}/build-tools/31.0.0/dx
+          ln -s ${ANDROID_HOME}/build-tools/31.0.0/lib/d8.jar ${ANDROID_HOME}/build-tools/31.0.0/lib/dx.jar
       - run: |
           sudo apt-get update
           sudo apt-get install qt5-default qt5-qmake qtdeclarative5-dev
